--- a/mapbox-cementerio.html
+++ b/mapbox-cementerio.html
@@ -17,6 +17,33 @@
             width: 100%;
             height: 100%
         }
+   		#legenda {
+			position: absolute;
+			top:50px;
+			left: 80%;
+			font-family: Arial, sans-serif;
+			font-size:15px;
+			background: #fff;
+			padding: 0px;
+			margin: 0px;
+			border: 3px solid #000;
+			line-height:1;
+			width: 250px;
+		}
+		.tituloCamada{
+			font-size:20px;
+			font-weight:bold;
+		}
+		ul {
+		   list-style: none;
+		}
+		ul li:before {
+		   content: "•";
+		   font-size: 200%; /* or whatever */
+		   padding-right: 10px;
+		   vertical-align:center;
+		}
+		
     </style>
     <script>
         //Añadir vuestor token y vuestro estilo
@@ -27,12 +54,18 @@
                 container: 'map',
                 style: 'mapbox://styles/thaisfs/ck6ie2r1e0and1inwvg0uuq0k',
                 center: [2.8363414, 41.9721784],
-                zoom: 16,
+                zoom: 17,
                 attributionControl: false
             });
             map.addControl(new mapboxgl.AttributionControl({compact: true}));
             map.addControl(new mapboxgl.NavigationControl());
-
+            
+            var scale = new mapboxgl.ScaleControl({
+                maxWidth: 280,
+                unit: 'metric'
+            });
+            map.addControl(scale);
+           
 
             map.on('load', function () {
                 map.addSource("cementerio_source", {
@@ -42,12 +75,12 @@
 
                 map.addLayer({
                     id: "cementerio",
-                    type: "line",
+                    type: "circle",
                     source: "cementerio_source",
-                    'source-layer': "sepulturainstamaps-4hd4y9", //poner vuestro titulo capa
+                    'source-layer': "SepulturaInstamaps-4hd4y9", //poner vuestro titulo capa
                     paint:{
-                        'line-color':"#00ff00",
-                        "line-width":3
+                   		'circle-color': "#ffffff",
+                   		'circle-opacity': 0.0
                     }
                 });
             });
@@ -83,6 +116,16 @@
 
 <body onload="init()">
     <div id="map"></div>
+    <div id=legenda>
+	<ul>
+		<li class=cementerio style="color: #be6f6f;">Nicho</li>
+		<li class=cementerio style="color: #4951c5;">Altar</li>
+		<li class=cementerio style="color: #39897f;">Panteón</li>
+		<li class=cementerio style="color: #f45da8;">Hipogeo</li>
+		<li class=cementerio style="color: #c4e9c9;">Columbario</li>
+		<li class=cementerio style="color: #ed5050;">Tumba</li>
+	</ul>
+	</div>
 </body>
 
 </html>
