--- a/index.html
+++ b/index.html
@@ -34,14 +34,10 @@
     <ul>
       <li>
         <h6>
-          <a target="_blank" href="leaflet-basico.html">Ejemplo básico</a>
+          <a target="_blank" href="mapbox-cementerio.html">Mapa Cementerio</a>
         </h6>
       </li>
-      <li>
-        <h6>
-          <a target="_blank" href="leaflet-controles.html">Ejemplo controles</a>
-        </h6>
-      </li>
+      
     </ul>
 
   </div>
